--- a/lesson22/package.json
+++ b/lesson22/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "bootstrap-sass": "^3.4.1",
     "vue": "^2.5.11",
-    "vue-router": "^3.1.6"
+    "vue-router": "^3.1.6",
+    "vuex": "^3.3.0"
   },
   "browserslist": [
     "> 1%",
